--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -42,7 +42,7 @@ html {
   
   a,
   a:visited {
-    color: var(--color-main);
+    color: #ffffff;
     text-decoration: none;
   }
   
